--- a/myproject/requirements.txt
+++ b/myproject/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.8.1
 Django==4.2.11
 sqlparse==0.5.0
+psycopg2==2.8.6
+dj-database-url==0.5.0
 typing_extensions==4.11.0
 gunicorn==20.1.0  # 版数は最新の安定版を使用
